--- a/app/src/main/res/layout/activity_guide_start.xml
+++ b/app/src/main/res/layout/activity_guide_start.xml
@@ -5,34 +5,98 @@
     android:orientation="vertical"
     android:background="@color/major_dark">
 
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
+
     <ImageView
-        android:layout_width="80dp"
-        android:layout_height="80dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_gravity="center_horizontal"
-        android:layout_marginTop="100dp"
         android:contentDescription="@string/app_name"
         android:src="@drawable/start_icon"/>
 
-    <TextView
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="10dp"
-        android:text="@string/welcome_to_use"
-        android:textColor="@color/major_light"
-        android:textSize="28sp"/>
+        android:orientation="horizontal"
+        android:layout_marginTop="12dp"
+        android:layout_gravity="center_horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="1dp"
+            android:text="@string/welcome_to_use_1"
+            android:textColor="@color/major_light"
+            android:textSize="28sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="1dp"
+            android:text="@string/welcome_to_use_2"
+            android:textColor="@color/major_light"
+            android:textSize="28sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="1dp"
+            android:text="@string/welcome_to_use_3"
+            android:textColor="@color/major_light"
+            android:textSize="28sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="1dp"
+            android:text="@string/welcome_to_use_4"
+            android:textColor="@color/major_light"
+            android:textSize="28sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="1dp"
+            android:text="@string/welcome_to_use_5"
+            android:textColor="@color/major_light"
+            android:textSize="28sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="1dp"
+            android:text="@string/welcome_to_use_6"
+            android:textColor="@color/major_light"
+            android:textSize="28sp"/>
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/welcome_to_use_7"
+            android:textColor="@color/major_light"
+            android:textSize="28sp"/>
+
+    </LinearLayout>
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="16dp"
         android:layout_marginLeft="32dp"
         android:layout_marginRight="32dp"
         android:text="@string/introduction"
-        android:textColor="@color/major_light"
-        android:textSize="14sp"/>
+        android:textColor="@color/hint_white"
+        android:textSize="14sp"
+        android:lineSpacingMultiplier="1.1"/>
+
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"/>
 
     <Button
         android:id="@+id/joinButton"
@@ -49,14 +113,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        android:layout_marginBottom="10dp">
+        android:layout_marginBottom="18dp">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
             android:text="@string/are_you_admin"
-            android:textColor="@color/major_light"
+            android:textColor="@color/hint_white"
             android:textSize="14sp"/>
 
         <TextView
