--- a/app/src/main/res/layout/fragment_report.xml
+++ b/app/src/main/res/layout/fragment_report.xml
@@ -2,13 +2,13 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/background" >
+    android:background="@color/background">
 
     <RelativeLayout
         android:id="@+id/titleLayout"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="@color/major_dark" >
+        android:background="@color/major_dark">
 
         <ImageView
             android:id="@+id/filterImageView"
@@ -19,7 +19,7 @@
             android:paddingLeft="16dp"
             android:paddingRight="16dp"
             android:contentDescription="@string/filter"
-            android:src="@drawable/filter_empty" />
+            android:src="@drawable/filter_empty"/>
 
         <TextView
             android:id="@+id/myTitleTextView"
@@ -31,7 +31,7 @@
             android:gravity="center"
             android:text="@string/my_report"
             android:textColor="@color/major_light"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/myShortTextView"
@@ -43,7 +43,7 @@
             android:background="@drawable/badge_short"
             android:gravity="center"
             android:textColor="@color/major_dark"
-            android:textSize="12sp" />
+            android:textSize="12sp"/>
 
         <TextView
             android:id="@+id/myMediumTextView"
@@ -55,7 +55,7 @@
             android:background="@drawable/badge_medium"
             android:gravity="center"
             android:textColor="@color/major_dark"
-            android:textSize="12sp" />
+            android:textSize="12sp"/>
 
         <TextView
             android:id="@+id/myLongTextView"
@@ -68,13 +68,13 @@
             android:gravity="center"
             android:text="@string/report_over_flow"
             android:textColor="@color/major_dark"
-            android:textSize="12sp" />
+            android:textSize="12sp"/>
 
         <View
             android:id="@+id/pivotView"
             android:layout_width="0dp"
             android:layout_height="0dp"
-            android:layout_centerInParent="true" />
+            android:layout_centerInParent="true"/>
 
         <TextView
             android:id="@+id/othersTitleTextView"
@@ -86,7 +86,7 @@
             android:gravity="center"
             android:text="@string/others_report"
             android:textColor="@color/hint_white"
-            android:textSize="20sp" />
+            android:textSize="20sp"/>
 
         <TextView
             android:id="@+id/othersShortTextView"
@@ -98,7 +98,7 @@
             android:background="@drawable/badge_short"
             android:gravity="center"
             android:textColor="@color/major_dark"
-            android:textSize="12sp" />
+            android:textSize="12sp"/>
 
         <TextView
             android:id="@+id/othersMediumTextView"
@@ -110,7 +110,7 @@
             android:background="@drawable/badge_medium"
             android:gravity="center"
             android:textColor="@color/major_dark"
-            android:textSize="12sp" />
+            android:textSize="12sp"/>
 
         <TextView
             android:id="@+id/othersLongTextView"
@@ -123,18 +123,17 @@
             android:gravity="center"
             android:text="@string/report_over_flow"
             android:textColor="@color/major_dark"
-            android:textSize="12sp" />
+            android:textSize="12sp"/>
 
         <ImageView
             android:id="@+id/addImageView"
-            android:layout_width="54dp"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp"
+            android:padding="14dp"
             android:contentDescription="@string/add"
-            android:src="@drawable/add_report_unselected" />
+            android:src="@drawable/add_report_unselected"/>
 
     </RelativeLayout>
 
@@ -143,14 +142,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/titleLayout"
-        android:cacheColorHint="@android:color/transparent" />
+        android:cacheColorHint="@android:color/transparent"/>
 
     <RelativeLayout
         android:id="@+id/noResultLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:visibility="gone" >
+        android:visibility="gone">
 
         <ImageView
             android:id="@+id/noResultImageView"
@@ -158,7 +157,7 @@
             android:layout_height="60dp"
 			android:layout_centerHorizontal="true"
             android:contentDescription="@string/no_filter_result"
-            android:src="@drawable/no_result" />
+            android:src="@drawable/no_result"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -166,7 +165,7 @@
             android:layout_below="@+id/noResultImageView"
             android:layout_marginTop="5dp"
             android:text="@string/no_filter_result"
-            android:textColor="@color/hint_light_grey" />
+            android:textColor="@color/hint_light_grey"/>
     </RelativeLayout>
 
 </RelativeLayout>
