--- a/app/src/main/res/layout/list_input_name.xml
+++ b/app/src/main/res/layout/list_input_name.xml
@@ -10,8 +10,8 @@
         android:layout_height="20dp"
         android:layout_gravity="center_vertical"
         android:layout_marginLeft="10dp"
-        android:contentDescription="@string/email"
-        android:src="@drawable/email" />
+        android:contentDescription="@string/contact"
+        android:src="@drawable/contact" />
 
     <TextView
         android:layout_width="0dp"
@@ -24,7 +24,7 @@
         android:singleLine="true"
         android:text="@string/input_contact_manually"
         android:textColor="@color/major_dark"
-        android:textSize="14sp" />
+        android:textSize="16sp" />
 
     <ImageView
         android:layout_width="wrap_content"
