--- a/app/src/main/res/layout/activity_start_sign_in.xml
+++ b/app/src/main/res/layout/activity_start_sign_in.xml
@@ -37,10 +37,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="26dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:hint="@string/input_username"
             android:inputType="textEmailAddress"
             android:drawableRight="@drawable/delete_start_drawable"
@@ -61,10 +61,10 @@
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:hint="@string/input_password"
             android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
