--- a/app/src/main/res/layout/activity_start_sign_up_by_email.xml
+++ b/app/src/main/res/layout/activity_start_sign_up_by_email.xml
@@ -36,10 +36,10 @@
             android:id="@+id/emailEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:hint="@string/input_email"
             android:inputType="textEmailAddress"
             android:drawableRight="@drawable/delete_start_drawable"
@@ -59,10 +59,10 @@
             android:id="@+id/passwordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:hint="@string/input_password"
             android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
@@ -82,10 +82,10 @@
             android:id="@+id/confirmPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:hint="@string/input_confirm_password"
             android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
