--- a/app/src/main/res/layout/activity_start_complete_info.xml
+++ b/app/src/main/res/layout/activity_start_complete_info.xml
@@ -54,10 +54,10 @@
             android:id="@+id/nicknameEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:hint="@string/input_nickname"
             android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
