--- a/app/src/main/res/layout/activity_start_find_by_email.xml
+++ b/app/src/main/res/layout/activity_start_find_by_email.xml
@@ -46,10 +46,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="108dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:hint="@string/input_email"
             android:inputType="textEmailAddress"
             android:drawableRight="@drawable/delete_start_drawable"
