--- a/app/src/main/res/layout/activity_start_find_by_phone.xml
+++ b/app/src/main/res/layout/activity_start_find_by_phone.xml
@@ -47,10 +47,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="108dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:hint="@string/input_phone"
             android:inputType="phone"
             android:drawableRight="@drawable/delete_start_drawable"
@@ -70,7 +70,6 @@
             android:orientation="horizontal"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
             android:layout_marginRight="10dp" >
 
             <EditText
@@ -80,6 +79,8 @@
                 android:layout_weight="1"
                 android:paddingTop="12dp"
                 android:paddingBottom="12dp"
+                android:paddingLeft="16dp"
+                android:paddingRight="10dp"
                 android:hint="@string/input_code"
                 android:inputType="number"
                 android:textColor="@color/font_major_light"
@@ -89,7 +90,7 @@
 
             <Button
                 android:id="@+id/acquireCodeButton"
-                android:layout_width="90dp"
+                android:layout_width="100dp"
                 android:layout_height="32dp"
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/button_light_solid_drawable"
