--- a/app/src/main/res/layout/activity_start_reset_password.xml
+++ b/app/src/main/res/layout/activity_start_reset_password.xml
@@ -45,10 +45,10 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="108dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:hint="@string/input_password"
             android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
@@ -67,10 +67,10 @@
             android:id="@+id/confirmPasswordEditText"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
             android:paddingTop="12dp"
             android:paddingBottom="12dp"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
             android:hint="@string/input_confirm_password"
             android:drawableRight="@drawable/delete_start_drawable"
             android:textColor="@color/font_major_light"
